@@ -277,9 +277,6 @@
   <data name="SqlCreateView" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\sql\sqlcreateview.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="SqlRunLog" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Sql\SqlRunLog.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
   <data name="SqlTopScript" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\sql\sqltopscript.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
