@@ -9,12 +9,6 @@
         Invalid
     End Enum
 
-    Public Enum eRunLogging
-        [True]
-        [False]
-        Ignore
-    End Enum
-
     Public Enum eShortType
         p ' stored procedure
         fn ' scalar function
@@ -264,16 +258,6 @@ Public Class SquealerObject
         End Set
     End Property
 
-    Private _RunLog As SquealerObjectType.eRunLogging
-    Public Property RunLog As SquealerObjectType.eRunLogging
-        Get
-            Return _RunLog
-        End Get
-        Set(value As SquealerObjectType.eRunLogging)
-            _RunLog = value
-        End Set
-    End Property
-
     Public ReadOnly Property FlagsList As List(Of String)
         Get
             Dim flags As New List(Of String)
@@ -301,7 +285,6 @@ Public Class SquealerObject
         _Type.LongType = SquealerObjectType.eType.Invalid
         _Flags = String.Empty
         _WithOptions = String.Empty
-        _RunLog = SquealerObjectType.eRunLogging.False
 
         Dim Reader As New Xml.XmlDocument
 
@@ -324,15 +307,6 @@ Public Class SquealerObject
 
         Try
             _WithOptions = Node.Attributes("WithOptions").Value.ToString
-        Catch ex As Exception
-        End Try
-
-        Try
-            Dim s As String = Node.Attributes("RunLog").Value.Trim
-            s = Threading.Thread.CurrentThread.CurrentCulture.TextInfo.ToTitleCase(s)
-
-            _RunLog = DirectCast([Enum].Parse(GetType(SquealerObjectType.eRunLogging), s), SquealerObjectType.eRunLogging)
-            '_RunLog = CBool(Node.Attributes("RunLog").Value)
         Catch ex As Exception
         End Try
 
