@@ -5,4 +5,3 @@
 as
 begin
 set ansi_nulls on;
-{RunLog}
