@@ -21,7 +21,7 @@ begin try
 	set @SqlrInternalErrorNumber = 0; -- Reset the error variable.
 	begin transaction
 
-{RunLog}/*######################################################################
+/*######################################################################
                          YOUR CODE BEGINS HERE.
 ######################################################################*/
 ;
