@@ -2,7 +2,6 @@
 /*######################################################################
                           YOUR CODE ENDS HERE.
 ######################################################################*/
-{RuntimeParameters}
 
 /***********************************************************************
 	Commit the transaction. If this is the parent process, then all
