@@ -223,7 +223,6 @@
     <Content Include="Resources\Sql\SqlEndScalarFunctionTest.txt" />
     <Content Include="Resources\Sql\SqlGrantExecute.txt" />
     <Content Include="Resources\Sql\SqlGrantSelect.txt" />
-    <Content Include="Resources\Sql\SqlRunLog.txt" />
     <None Include="Resources\Sql\SqlTopScript.txt" />
     <Content Include="Resources\Sql\SqlTableMultiStatementTableFunctionTest.txt" />
     <Content Include="Resources\Sql\SqlTableMultiStatementTableFunction.txt" />
